--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">TimesSquare Sample</string>
+    <string name="app_name">My History</string>
     <string name="Done">Done</string>
     <string name="Customized">Customized</string>
     <string name="Decorator">Decorator</string>
